--- a/sinatra_todos/views/layout.erb
+++ b/sinatra_todos/views/layout.erb
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=PT+Sans">
     <link rel="stylesheet" href="/stylesheets/whitespace-reset.css">
-    <link rel="stylesheet" href="/stylesheets/application.css">
+    <link rel="stylesheet" href="/stylesheets/application1.css">
+    <!-- <link rel="stylesheet" href="~/launchschool/stylesheets/application.css"> -->
     <script src="/javascripts/jquery-2.1.4.js"></script>
     <script src="/javascripts/application.js"></script>
   </head>
